Fix: Fix overflow of elements on small screen

--- a/Project-I-Social-Card/social-card/src/components/FooterComponents/Footer.css
+++ b/Project-I-Social-Card/social-card/src/components/FooterComponents/Footer.css
@@ -1,9 +1,11 @@
 .footerSection {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .iconSection{
     width: 80%;
-    margin-left: 20%;
+    margin-left: 17%;
     display: flex;
     justify-content: space-between;
     margin-top: 3%;
@@ -14,8 +16,9 @@
     height: 3%;
     padding: 10px;
     color: grey;
+    cursor: pointer;
 }
 
 .iconSection p {
-    padding-right: 100px;
+    padding-right: 60px;
 }
